# tracker

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_location.py
src/tracker_mcp/: main.py  models.py
