[project]
name = "tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "sqlmodel>=0.0.21",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
]

[project.scripts]
tracker = "tracker_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracker_mcp"]

[dependency-groups]
dev = [
    "basedpyright>=1.22",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line length) is managed by ruff-format, which intentionally leaves
# long string literals (e.g. error messages) unwrapped.
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
# Alembic migration scripts are generated code; their canonical
# `sqlmodel.sql.sqltypes.AutoString()` form doesn't resolve under basedpyright.
exclude = ["**/__pycache__", ".venv", "alembic/versions"]
